Fixed the new thread button not appearing Fixed comment layouts on mobile devices

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1518,6 +1518,11 @@ blockquote {
   border: dotted 1px #eee;
 }
 
+.img img {
+  max-width: 100%;
+  vertical-align: bottom;
+}
+
 .spoiler {
   padding: 1px;
   display: inline-block;
